# pitank

devel/include/game_engine/: RobotDescription.h  RobotDescriptionArray.h  UIState.h
devel/lib/ai/: ai
devel/lib/controls/: joystick
devel/lib/game_engine/: game_engine
devel/share/ai/cmake/: aiConfig.cmake
devel/share/apriltags/cmake/: apriltagsConfig.cmake
devel/share/apriltags_ros/cmake/: apriltags_rosConfig.cmake
devel/share/controls/cmake/: controlsConfig.cmake
devel/share/game_engine/cmake/: game_engineConfig.cmake
devel/share/projector_calib/cmake/: projector_calibConfig.cmake
devel/share/qt_build/cmake/: qt_buildConfig.cmake
devel/share/qt_create/cmake/: qt_createConfig.cmake
devel/share/qt_tutorials/cmake/: qt_tutorialsConfig.cmake
devel/share/uvc_camera/cmake/: uvc_cameraConfig.cmake
src/ai/: CMakeLists.txt
src/ai/include/ai/: control.hpp  control.hpp.autosave
src/ai/src/: control.cpp  control.cpp.autosave
src/controls/: CMakeLists.txt  controls.launch
src/controls/include/joystick/: joystick.hpp
src/controls/src/: joystick.cpp
src/game_engine/: CMakeLists.txt  game.launch
src/game_engine/include/graphics/: dialog.hpp  main_window.hpp
src/game_engine/include/objects/: bullet.hpp  game_clock.hpp  tag.hpp  wall.hpp
src/game_engine/include/utils/: system_info.hpp
src/game_engine/msg/: RobotDescription.msg  UIState.msg
src/game_engine/src/graphics/: dialog.cpp  main_window.cpp  map_drawer.cpp
src/game_engine/src/objects/: bullet.cpp  game_clock.cpp  tag.cpp  wall.cpp
src/game_engine/ui/: main_window.ui
(+18 files in other folders)
